--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>To Do List</title>
-  <base href="/demo">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Paweł Makowski">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
