Update url configs

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>To Do List</title>
-  <base href="/">
+  <base href="/demo">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Paweł Makowski">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
